[gd_scene load_steps=7 format=3 uid="uid://dsos0xlyffm8j"]

[ext_resource type="Script" path="res://Scenes/Discs_Players/player_one.gd" id="1_2hx3o"]
[ext_resource type="Script" path="res://Scenes/Discs_Players/PlayerDisc1v1.gd" id="2_e15ui"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="3_0xs3u"]
[ext_resource type="Texture2D" uid="uid://c3xm555io6wi6" path="res://Assets/DiscOne.png" id="3_d3l2f"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_rjapk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1qq13"]
radius = 59.4138

[node name="PlayerOne" type="Node2D"]
position = Vector2(0, 3)
script = ExtResource("1_2hx3o")

[node name="PlayerDisc" type="RigidBody2D" parent="."]
collision_layer = 2
collision_mask = 7
physics_material_override = SubResource("PhysicsMaterial_rjapk")
gravity_scale = 0.0
max_contacts_reported = 10
contact_monitor = true
script = ExtResource("2_e15ui")

[node name="Sprite2D" type="Sprite2D" parent="PlayerDisc"]
position = Vector2(0, -3.05176e-05)
scale = Vector2(0.266, 0.266)
texture = ExtResource("3_d3l2f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDisc"]
shape = SubResource("CircleShape2D_1qq13")

[node name="PlayerController" type="Control" parent="PlayerDisc"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Test" type="Node2D" parent="PlayerDisc/PlayerController"]
position = Vector2(1, 0)

[node name="UI" type="CanvasLayer" parent="PlayerDisc/PlayerController/Test"]

[node name="VirtualJoystick" parent="PlayerDisc/PlayerController/Test/UI" instance=ExtResource("3_0xs3u")]
offset_left = 69.0
offset_top = -352.0
offset_right = 369.0
offset_bottom = -52.0

[connection signal="body_entered" from="PlayerDisc" to="PlayerDisc" method="_on_body_entered"]
